Adds IoT example (#27)
   * Adds iot edge deployment notebook
    * Adds cookiecutter
    * Updates Readme
    * Adds IoT tests to build

--- a/{{cookiecutter.project_name}}/01_DataPrep.ipynb
+++ b/{{cookiecutter.project_name}}/01_DataPrep.ipynb
@@ -679,7 +679,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now move on to [train on local](02_Train_On_Local.ipynb) notebook to train our model using Azure Machine Learning."
+    "We can now move on to [train on local](02_TrainOnLocal.ipynb) notebook to train our model using Azure Machine Learning."
    ]
   }
  ],
