--- a/{{cookiecutter.project_name}}/02_TrainOnLocal.ipynb
+++ b/{{cookiecutter.project_name}}/02_TrainOnLocal.ipynb
@@ -616,7 +616,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we [develop the scoring script](03_Develop_Scoring_Script.ipynb) for this model."
+    "Next, we [develop the scoring script](03_DevelopScoringScript.ipynb) for this model."
    ]
   }
  ],
