--- a/{{cookiecutter.project_name}}/aks/05_DeployOnAKS.ipynb
+++ b/{{cookiecutter.project_name}}/aks/05_DeployOnAKS.ipynb
@@ -14,9 +14,7 @@
    "metadata": {},
    "source": [
     "# Deploying a web service to Azure Kubernetes Service (AKS)\n",
-    "In this notebook, we show the following steps for deploying a web service using AML:\n",
-    "- Create an image\n",
-    "- Test image locally\n",
+    "In this notebook, we show the following steps for deploying a web service using AzureML:\n",
     "- Provision an AKS cluster (one time action)\n",
     "- Deploy the service\n",
     "- Test the web service\n",
@@ -29,21 +27,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import pandas as pd\n",
-    "from utilities import text_to_json, get_auth\n",
-    "import requests\n",
-    "import numpy as np\n",
     "import json\n",
+    "import os\n",
     "import subprocess\n",
-    "from azureml.core import Workspace\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import requests\n",
     "from azureml.core.compute import AksCompute, ComputeTarget\n",
     "from azureml.core.webservice import Webservice, AksWebservice\n",
-    "from azureml.core.image import Image\n",
-    "from azureml.core.model import Model\n",
     "from azureml.core.workspace import Workspace\n",
-    "from azureml.core.conda_dependencies import CondaDependencies\n",
-    "from dotenv import set_key, get_key, find_dotenv"
+    "from dotenv import set_key, get_key, find_dotenv\n",
+    "from utilities import text_to_json, get_auth\n"
    ]
   },
   {
@@ -65,6 +60,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_name = get_key(env_path, 'image_name')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": [
      "parameters"
@@ -72,7 +76,6 @@
    },
    "outputs": [],
    "source": [
-    "image_name = \"YOUR_IMAGE_NAME\"\n",
     "aks_service_name = \"YOUR_AKS_SERVICE_NAME\"\n",
     "aks_name = \"YOUR_AKS_NAME\"\n",
     "aks_location = \"YOUR_AKS_LOCATION\""
@@ -84,7 +87,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "set_key(env_path, \"image_name\", image_name)\n",
     "set_key(env_path, \"aks_service_name\", aks_service_name)\n",
     "set_key(env_path, \"aks_name\", aks_name)\n",
     "set_key(env_path, \"aks_location\", aks_location)"
@@ -109,219 +111,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Load model"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_name = 'question_match_model'\n",
-    "model_version = int(get_key(env_path, 'model_version'))\n",
-    "model = Model(ws, name=model_name, version=model_version)\n",
-    "print(model.name, model.version)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Create an image\n",
-    "We will now modify the `score.py` created in the previous notebook for the `init()` function to use the model we registered to the workspace earlier."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%writefile score.py\n",
-    "\n",
-    "import sys\n",
-    "import pandas as pd\n",
-    "import json\n",
-    "from duplicate_model import DuplicateModel\n",
-    "import logging\n",
-    "import timeit as t\n",
-    "from azureml.core.model import Model\n",
-    "sys.path.append('./scripts/')\n",
-    "\n",
-    "def init():\n",
-    "    logger = logging.getLogger(\"scoring_script\")\n",
-    "    global model\n",
-    "    model_name = 'question_match_model'\n",
-    "    model_path = Model.get_model_path(model_name)\n",
-    "    questions_path = './data_folder/questions.tsv'\n",
-    "    start = t.default_timer()\n",
-    "    model = DuplicateModel(model_path, questions_path)\n",
-    "    end = t.default_timer()\n",
-    "    loadTimeMsg = \"Model loading time: {0} ms\".format(round((end-start)*1000, 2))\n",
-    "    logger.info(loadTimeMsg)\n",
-    "\n",
-    "def run(body):\n",
-    "    logger = logging.getLogger(\"scoring_script\")\n",
-    "    json_load_text = json.loads(body)\n",
-    "    text_to_score = json_load_text['input']\n",
-    "    start = t.default_timer()\n",
-    "    resp = model.score(text_to_score) \n",
-    "    end = t.default_timer()\n",
-    "    logger.info(\"Prediction took {0} ms\".format(round((end-start)*1000, 2)))\n",
-    "    return(json.dumps(resp))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's specifiy the conda and pip dependencies for the image."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "conda_pack = [\"scikit-learn==0.19.1\", \"pandas==0.23.3\"]\n",
-    "requirements = [\"lightgbm==2.1.2\", \"azureml-defaults==1.0.10\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lgbmenv = CondaDependencies.create(conda_packages=conda_pack, pip_packages=requirements)\n",
-    "\n",
-    "with open(\"lgbmenv.yml\", \"w\") as f:\n",
-    "    f.write(lgbmenv.serialize_to_string())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from azureml.core.image import ContainerImage\n",
-    "\n",
-    "image_config = ContainerImage.image_configuration(\n",
-    "    execution_script=\"score.py\",\n",
-    "    runtime=\"python\",\n",
-    "    conda_file=\"lgbmenv.yml\",\n",
-    "    description=\"Image with lightgbm model\",\n",
-    "    tags={\"area\": \"text\", \"type\": \"lightgbm\"},\n",
-    "    dependencies=[\n",
-    "        \"./data_folder/questions.tsv\",\n",
-    "        \"./duplicate_model.py\",\n",
-    "        \"./scripts/ItemSelector.py\",\n",
-    "    ],\n",
-    ")\n",
-    "\n",
-    "image = ContainerImage.create(\n",
-    "    name=image_name,\n",
-    "    # this is the model object\n",
-    "    models=[model],\n",
-    "    image_config=image_config,\n",
-    "    workspace=ws,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "image.wait_for_creation(show_output = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(image.name, image.version)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image_version = str(image.version)\n",
-    "set_key(env_path, \"image_version\", image_version)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can find the logs of image creation in the following location."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image.image_build_log_uri"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Test image locally"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, let's use one of the duplicate questions to test our image."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dupes_test_path = './data_folder/dupes_test.tsv'\n",
-    "dupes_test = pd.read_csv(dupes_test_path, sep='\\t', encoding='latin1')\n",
-    "text_to_score = dupes_test.iloc[0,4]\n",
-    "text_to_score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "jsontext = text_to_json(text_to_score)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "image.run(input_data=jsontext)"
+    "image = ws.images[image_name]"
    ]
   },
   {
@@ -482,7 +277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%time\n",
+    "%%time\n",
     "aks_service.wait_for_deployment(show_output=True)\n",
     "print(aks_service.state)"
    ]
@@ -509,6 +304,27 @@
    "source": [
     "## Test the web service\n",
     "We now test the web sevice."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dupes_test_path = './data_folder/dupes_test.tsv'\n",
+    "dupes_test = pd.read_csv(dupes_test_path, sep='\\t', encoding='latin1')\n",
+    "text_to_score = dupes_test.iloc[0,4]\n",
+    "text_to_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jsontext = text_to_json(text_to_score)"
    ]
   },
   {
@@ -765,7 +581,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we will test the [throughput of the web service](05_Speed_Test_WebApp.ipynb)."
+    "Next, we will test the [throughput of the web service](06_SpeedTestWebApp.ipynb)."
    ]
   }
  ],
