--- a/{{cookiecutter.project_name}}/aks/07_RealTimeScoring.ipynb
+++ b/{{cookiecutter.project_name}}/aks/07_RealTimeScoring.ipynb
@@ -15,7 +15,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1,
+      "version": 1.0,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -35,7 +35,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1,
+      "version": 1.0,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -56,7 +56,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1,
+      "version": 1.0,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -69,17 +69,16 @@
    "outputs": [],
    "source": [
     "from __future__ import print_function\n",
-    "import os\n",
-    "import numpy as np\n",
+    "\n",
+    "import math\n",
+    "\n",
+    "import ipywidgets as widgets\n",
     "import pandas as pd\n",
     "import requests\n",
-    "import json\n",
-    "import math\n",
-    "import ipywidgets as widgets\n",
-    "from utilities import read_questions, text_to_json, get_auth\n",
-    "from azureml.core.workspace import Workspace\n",
     "from azureml.core.webservice import AksWebservice\n",
-    "from dotenv import set_key, get_key, find_dotenv"
+    "from azureml.core.workspace import Workspace\n",
+    "from dotenv import get_key, find_dotenv\n",
+    "from utilities import read_questions, text_to_json, get_auth\n"
    ]
   },
   {
@@ -134,7 +133,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1,
+      "version": 1.0,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -157,7 +156,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1,
+      "version": 1.0,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -194,7 +193,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1,
+      "version": 1.0,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -214,7 +213,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1,
+      "version": 1.0,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -268,7 +267,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1,
+      "version": 1.0,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -288,7 +287,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1,
+      "version": 1.0,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -316,7 +315,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1,
+      "version": 1.0,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -336,7 +335,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1,
+      "version": 1.0,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -462,7 +461,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1,
+      "version": 1.0,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -482,7 +481,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1,
+      "version": 1.0,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -512,7 +511,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1,
+      "version": 1.0,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -534,7 +533,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1,
+      "version": 1.0,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -560,7 +559,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1,
+      "version": 1.0,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -580,7 +579,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1,
+      "version": 1.0,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -605,7 +604,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1,
+      "version": 1.0,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -627,7 +626,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1,
+      "version": 1.0,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -651,7 +650,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1,
+      "version": 1.0,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -671,7 +670,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1,
+      "version": 1.0,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -691,7 +690,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To tear down the cluster and related resources go to the [last notebook](07_Tear_Down.ipynb)."
+    "To tear down the cluster and related resources go to the [last notebook](08_TearDown.ipynb)."
    ]
   }
  ],
@@ -699,7 +698,7 @@
   "extensions": {
    "jupyter_dashboards": {
     "activeView": "report_default",
-    "version": 1,
+    "version": 1.0,
     "views": {
      "grid_default": {
       "name": "grid",
