--- a/{{cookiecutter.project_name}}/aks/06_SpeedTestWebApp.ipynb
+++ b/{{cookiecutter.project_name}}/aks/06_SpeedTestWebApp.ipynb
@@ -31,19 +31,17 @@
    "source": [
     "import asyncio\n",
     "import json\n",
-    "import random\n",
     "import urllib.request\n",
     "from timeit import default_timer\n",
+    "\n",
     "import aiohttp\n",
     "import nest_asyncio\n",
-    "from tqdm import tqdm\n",
-    "import requests\n",
     "import pandas as pd\n",
-    "from utilities import text_to_json, get_auth\n",
-    "from azureml.core.workspace import Workspace\n",
-    "from azureml.core.image import Image\n",
     "from azureml.core.webservice import AksWebservice\n",
-    "from dotenv import set_key, get_key, find_dotenv"
+    "from azureml.core.workspace import Workspace\n",
+    "from dotenv import get_key, find_dotenv\n",
+    "from tqdm import tqdm\n",
+    "from utilities import text_to_json, get_auth\n"
    ]
   },
   {
@@ -293,7 +291,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we will explore the real-time scoring in an [iPyWidget app](06_Real_Time_Scoring.ipynb)."
+    "Next, we will explore the real-time scoring in an [iPyWidget app](07_RealTimeScoring.ipynb)."
    ]
   }
  ],
