renames item_selector

--- a/{{cookiecutter.project_name}}/02_TrainOnLocal.ipynb
+++ b/{{cookiecutter.project_name}}/02_TrainOnLocal.ipynb
@@ -135,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note `create_model.py` also references a `ItemSelector.py` and `label_rank.py` file. Let's check those scripts as well."
+    "Note `create_model.py` also references a `item_selector.py` and `label_rank.py` file. Let's check those scripts as well."
    ]
   },
   {
@@ -144,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('./scripts/ItemSelector.py', 'r') as f:\n",
+    "with open('./scripts/item_selector.py', 'r') as f:\n",
     "    print(f.read())"
    ]
   },
@@ -203,7 +203,7 @@
    "metadata": {},
    "source": [
     "#### Submit script to run in the user-managed environment\n",
-    "Note that the whole `scripts` folder is submitted for execution, including the `ItemSelector.py` and `label_rank.py` files. The model will be written to `outputs` directory which is a special directory such that all content in this directory is automatically uploaded to your workspace. "
+    "Note that the whole `scripts` folder is submitted for execution, including the `item_selector.py` and `label_rank.py` files. The model will be written to `outputs` directory which is a special directory such that all content in this directory is automatically uploaded to your workspace. "
    ]
   },
   {
