--- a/{{cookiecutter.project_name}}/03_DevelopScoringScript.ipynb
+++ b/{{cookiecutter.project_name}}/03_DevelopScoringScript.ipynb
@@ -236,7 +236,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we move on to [creating the docker image and deploying on AKS](04_CreateImage.ipynb)."
+    "Next, we move on to [creating the docker image which we will deploy](04_CreateImage.ipynb)."
    ]
   }
  ],
