--- a/{{cookiecutter.project_name}}/04_CreateImage.ipynb
+++ b/{{cookiecutter.project_name}}/04_CreateImage.ipynb
@@ -189,7 +189,7 @@
     "    dependencies=[\n",
     "        \"./data_folder/questions.tsv\",\n",
     "        \"./duplicate_model.py\",\n",
-    "        \"./scripts/ItemSelector.py\",\n",
+    "        \"./scripts/item_selector.py\",\n",
     "    ],\n",
     ")\n",
     "\n",
