use S1 tier, remove disable process identification

--- a/{{cookiecutter.project_name}}/iotedge/05_DeployOnIOTedge.ipynb
+++ b/{{cookiecutter.project_name}}/iotedge/05_DeployOnIOTedge.ipynb
@@ -20,25 +20,11 @@
     "\n",
     "\n",
     "## Outline<a id=\"BackToTop\"></a>\n",
-    "- [Prerequisites](#prerequisite)\n",
     "- [Step 1: Create an IoT Hub and Register an IoT Edge device](#step1)\n",
     "- [Step 2: Provision and Configure IoT Edge Device](#step2)\n",
     "- [Step 3: Deploy ML Module on IoT Edge Device](#step3)\n",
     "- [Step 4: Test ML Module](#step4)\n",
     "- [Clean up resource](#cleanup)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Prerequisites <a id=\"Prerequisite\"></a>\n",
-    "\n",
-    "- Satisfy the requirment specified in Sections `Prerequisites` and `Setup` in the repo's [README page](./README.md).\n",
-    "\n",
-    "- Build the trained ML Model into a docker image. \n",
-    "    \n",
-    "    - You have two options to satisfy this requirment. The first option is to complete all the notebooks from [00_AML_Configuration.ipynb](./00_AMLConfiguration.ipynb) through [04_CreateImage.ipynb](./04_CreateImage.ipynb). In this tutorial, we show the steps when using this option. The second option is to use a prebuilt docker image created by the user. Instructions need to be adjusted to proceed with this option."
    ]
   },
   {
@@ -135,9 +121,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "iot_hub_name = get_key(env_path, 'iot_hub_name')\n",
-    "device_id = get_key(env_path, 'device_id')\n",
-    "module_name = get_key(env_path, 'module_name')\n",
     "resource_group = get_key(env_path, 'resource_group')\n",
     "image_name = get_key(env_path, 'image_name')"
    ]
@@ -163,18 +146,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# install az-cli iot extension \n",
+    "!az extension add --name azure-cli-iot-ext"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Create IoT Hub\n",
     "\n",
-    "The following code creates a free F1 hub with name `iot_hub_name` in the resource group `resource_group`.\n",
+    "Azure IoT Hub provides several [price tiers](https://azure.microsoft.com/en-us/pricing/details/iot-hub/), which supports varying capabilities. \n",
     "\n",
-    "Common issue and resolution are shown below.\n",
-    "\n",
-    "(1) See error message \"Resource group `<resource_group>` could not be found\". You may forget to set which Azure subscription to use. Run command `az account set --subscription <subscription_id>` to set your subscription.\n",
-    "\n",
-    "(2) See error message \"Max number of Iot Hubs exceeded for sku = Free, Max Allowed = 1, Current = 2 in the subscription Id: `<subscription_id>`.\" This error message indicates that the quota is reached for creating the specific type of IoT Hub resource in Azure."
+    "We create a non-free Standard tier S1 hub in this notebook. Besides, we also provide the command to create a free tier F1."
    ]
   },
   {
@@ -183,7 +172,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!az extension add --name azure-cli-iot-ext\n",
     "!az iot hub list --resource-group $resource_group -o table"
    ]
   },
@@ -193,7 +181,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!az iot hub create --resource-group $resource_group --name $iot_hub_name --sku F1 "
+    "# Command to create a Standard tier S1 hub with name `iot_hub_name` in the resource group `resource_group`.\n",
+    "!az iot hub create --resource-group $resource_group --name $iot_hub_name --sku S1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Command to create a free tier F1 hub. You may encounter error \"Max number of Iot Hubs exceeded for sku = Free\" if quota is reached.\n",
+    "# !az iot hub create --resource-group $resource_group --name $iot_hub_name --sku F1 "
    ]
   },
   {
@@ -384,71 +383,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Disable process identification\n",
-    "\n",
-    "While in preview, Azure Machine Learning does not support the process identification security feature enabled by default with IoT Edge. Below are the steps to disable it. This is however not suitable for use in production. These steps are only necessary on Linux, as you will have completed this during the Windows Edge runtime installation.\n",
-    "\n",
-    "To disable process identification on your IoT edge device, you'll need to provide the ip address and port for workload_uri and management_uri in the connect section of the IoT Edge daemon configuration.\n",
-    "\n",
-    "Get the IP address first. Enter `ifconfig` in your command line and copy the IP address of the docker0 interface.\n",
-    "\n",
-    "For more information, please check section `Disable process identification` of document [Tutorial: Deploy Azure Machine Learning as an IoT Edge module ](https://docs.microsoft.com/en-us/azure/iot-edge/tutorial-deploy-machine-learning)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "172.17.0.1\n"
-     ]
-    }
-   ],
-   "source": [
-    "output_data = !ifconfig\n",
-    "ip_docker0 = output_data[1].split(\":\")[1].split()[0]\n",
-    "print(ip_docker0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "management_uri = 'http://{}:15580'.format(ip_docker0)\n",
-    "workload_uri = 'http://{}:15581'.format(ip_docker0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!sudo sed -i \"s#\\(management_uri: \\).*#\\1\\\"$management_uri\\\"#g\" /etc/iotedge/config.yaml\n",
-    "!sudo sed -i \"s#\\(workload_uri: \\).*#\\1\\\"$workload_uri\\\"#g\" /etc/iotedge/config.yaml"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# restart the daemon\n",
-    "!sudo systemctl restart iotedge\n",
-    "time.sleep(10) # Wait 10 seconds for iotedge to restsrt"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Verify successful installation"
    ]
   },
@@ -503,12 +437,9 @@
     "\n",
     "- device_connection_string\n",
     "\n",
-    "\n",
     "Step 2: run approprate commands on the edge device to get values for following variables.\n",
     "\n",
     "- release\n",
-    "- management_uri\n",
-    "- workload_uri\n",
     "\n",
     "Step 3: run next cell to generate *deviceconfig.sh* file. \n",
     "\n",
@@ -525,8 +456,6 @@
     "contents = file.read()\n",
     "contents = contents.replace('__release', release)\n",
     "contents = contents.replace('__device_connection_string', device_connection_string)\n",
-    "contents = contents.replace('__management_uri', management_uri)\n",
-    "contents = contents.replace('__workload_uri', workload_uri)\n",
     "\n",
     "with open('./deviceconfig.sh', 'wt', encoding='utf-8') as output_file:\n",
     "    output_file.write(contents)"
