Add notebook parameters

--- a/{{cookiecutter.project_name}}/aks/06_SpeedTestWebApp.ipynb
+++ b/{{cookiecutter.project_name}}/aks/06_SpeedTestWebApp.ipynb
@@ -109,7 +109,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
    "outputs": [],
    "source": [
     "NUMBER_OF_REQUESTS = 100  # Total number of requests\n",
@@ -296,10 +300,11 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python [conda env:MLAKSDeployAML]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-MLAKSDeployAML-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
