--- a/{{cookiecutter.project_name}}/aks/05_DeployOnAKS.ipynb
+++ b/{{cookiecutter.project_name}}/aks/05_DeployOnAKS.ipynb
@@ -130,13 +130,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "vm_family = \"Dv2\"\n",
+    "vm_size = \"Standard_D4_v2\"\n",
+    "vm_cores = 8\n",
+    "node_count = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "vm_dict = {\n",
-    "    \"Dv2\": {\n",
-    "        \"size\": \"Standard_D4_v2\",\n",
-    "        \"cores\": 8\n",
+    "    vm_family: {\n",
+    "        \"size\": vm_size,\n",
+    "        \"cores\": vm_cores\n",
     "    }\n",
     "}"
    ]
@@ -147,8 +163,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vm_family = \"Dv2\"\n",
-    "node_count = 4\n",
     "requested_cores = node_count * vm_dict[vm_family][\"cores\"]"
    ]
   },
@@ -186,7 +200,7 @@
    "outputs": [],
    "source": [
     "prov_config = AksCompute.provisioning_configuration(\n",
-    "    agent_count=4, vm_size=\"Standard_D4_v2\", location=aks_location\n",
+    "    agent_count=node_count, vm_size=vm_size, location=aks_location\n",
     ")\n",
     "\n",
     "# Create the cluster\n",
@@ -249,11 +263,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "num_replicas = 2\n",
+    "cpu_cores = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Set the web service configuration \n",
-    "aks_config = AksWebservice.deploy_configuration(num_replicas=2, cpu_cores=1)"
+    "aks_config = AksWebservice.deploy_configuration(num_replicas=num_replicas, cpu_cores=cpu_cores)"
    ]
   },
   {
@@ -309,12 +337,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "num_dupes_to_score = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "dupes_test_path = './data_folder/dupes_test.tsv'\n",
     "dupes_test = pd.read_csv(dupes_test_path, sep='\\t', encoding='latin1')\n",
-    "text_to_score = dupes_test.iloc[0,4]\n",
+    "text_to_score = dupes_test.iloc[0,num_dupes_to_score]\n",
     "text_to_score"
    ]
   },
@@ -374,7 +415,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dupes_to_score = dupes_test.iloc[:5,4]"
+    "dupes_to_score = dupes_test.iloc[:5,num_dupes_to_score]"
    ]
   },
   {
@@ -553,10 +594,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "new_num_replicas = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!kubectl scale --current-replicas=2 --replicas=10 {\"deployment/\" + aks_service_name}"
+    "!kubectl scale --current-replicas=$num_replicas --replicas=$new_num_replicas {\"deployment/\" + aks_service_name}"
    ]
   },
   {
@@ -591,10 +645,11 @@
     "name": "raymondl"
    }
   ],
+  "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python [conda env:MLAKSDeployAML]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-MLAKSDeployAML-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
