Collect and print twi metrics

--- a/{{cookiecutter.project_name}}/aks/05_DeployOnAKS.ipynb
+++ b/{{cookiecutter.project_name}}/aks/05_DeployOnAKS.ipynb
@@ -38,7 +38,8 @@
     "from azureml.core.webservice import Webservice, AksWebservice\n",
     "from azureml.core.workspace import Workspace\n",
     "from dotenv import set_key, get_key, find_dotenv\n",
-    "from utilities import text_to_json, get_auth\n"
+    "from utilities import text_to_json, get_auth\n",
+    "from MetricsUtils.hpStatisticsCollection import statisticsCollector, CollectionEntry\n"
    ]
   },
   {
@@ -204,9 +205,12 @@
     ")\n",
     "\n",
     "# Create the cluster\n",
+    "statisticsCollector.startTask(CollectionEntry.AML_COMPUTE_CREATION)\n",
     "aks_target = ComputeTarget.create(\n",
     "    workspace=ws, name=aks_name, provisioning_configuration=prov_config\n",
-    ")"
+    ")\n",
+    "statisticsCollector.endTask(CollectionEntry.AML_COMPUTE_CREATION)\n",
+    "print(statisticsCollector.getEntry(CollectionEntry.AML_COMPUTE_CREATION))"
    ]
   },
   {
@@ -647,7 +651,7 @@
   ],
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
