--- a/{{cookiecutter.project_name}}/00_AMLConfiguration.ipynb
+++ b/{{cookiecutter.project_name}}/00_AMLConfiguration.ipynb
@@ -27,7 +27,8 @@
     "from azureml.core import Workspace\n",
     "from dotenv import set_key, get_key, find_dotenv\n",
     "from pathlib import Path\n",
-    "from utilities import get_auth"
+    "from utilities import get_auth\n",
+    "from MetricsUtils.hpStatisticsCollection import statisticsCollector, CollectionEntry"
    ]
   },
   {
@@ -169,6 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "statisticsCollector.startTask(CollectionEntry.AML_WORKSPACE_CREATION)\n",
     "ws = Workspace.create(\n",
     "    name=workspace_name,\n",
     "    subscription_id=subscription_id,\n",
@@ -177,7 +179,9 @@
     "    create_resource_group=True,\n",
     "    auth=get_auth(env_path),\n",
     "    exist_ok=True,\n",
-    ")"
+    ")\n",
+    "statisticsCollector.endTask(CollectionEntry.AML_WORKSPACE_CREATION)\n",
+    "print(statisticsCollector.getEntry(CollectionEntry.AML_WORKSPACE_CREATION))"
    ]
   },
   {
