Save collected statistics to the workspace's storage

--- a/{{cookiecutter.project_name}}/00_AMLConfiguration.ipynb
+++ b/{{cookiecutter.project_name}}/00_AMLConfiguration.ipynb
@@ -188,6 +188,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Get a connection string to the workspace's storage to use to save the statistics."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stgAcctName = ws.get_details()['storageAccount'].split('/')[-1]\n",
+    "storageConnString = storageConnection.getConnectionStringWithAzCredentials(resource_group, stgAcctName)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Let's check the details of the workspace."
    ]
   },
@@ -214,6 +231,22 @@
    "outputs": [],
    "source": [
     "ws.write_config()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save the statistics collected so far."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "statisticsCollector.uploadContent(storageConnString)"
    ]
   },
   {
