--- a/{{cookiecutter.project_name}}/aks/05_DeployOnAKS.ipynb
+++ b/{{cookiecutter.project_name}}/aks/05_DeployOnAKS.ipynb
@@ -124,6 +124,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Restore the statistics storage information."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stgAcctName = ws.get_details()['storageAccount'].split('/')[-1]\n",
+    "storageConnString = storageConnection.getConnectionStringWithAzCredentials(ws.resource_group, stgAcctName)\n",
+    "statisticsCollector.hydrateFromStorage(storageConnString)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Provision the AKS Cluster\n",
     "This is a one time setup. You can reuse this cluster for multiple deployments after it has been created. If you delete the cluster or the resource group that contains it, then you would have to recreate it. Let's first check if there are enough cores in the subscription for the cluster ."
    ]
@@ -633,6 +651,22 @@
    "outputs": [],
    "source": [
     "!kubectl get deployment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save the statistics collected so far."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "statisticsCollector.uploadContent(storageConnString)"
    ]
   },
   {
