--- a/{{cookiecutter.project_name}}/00_AMLConfiguration.ipynb
+++ b/{{cookiecutter.project_name}}/00_AMLConfiguration.ipynb
@@ -194,11 +194,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "storageConnString = \"YOUR_STORAGE_CONNECTION_STRING\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "stgAcctName = ws.get_details()['storageAccount'].split('/')[-1]\n",
-    "storageConnString = storageConnection.getConnectionStringWithAzCredentials(resource_group, stgAcctName)"
+    "if storageConnString == \"YOUR_STORAGE_CONNECTION_STRING\":\n",
+    "    stgAcctName = ws.get_details()['storageAccount'].split('/')[-1]\n",
+    "    storageConnString = storageConnection.getConnectionStringWithAzCredentials(resource_group, stgAcctName)\n",
+    "set_key(env_path, \"storage_conn_string\", storageConnString)"
    ]
   },
   {
