Retrieve the storage connection string from dotenv

--- a/{{cookiecutter.project_name}}/aks/05_DeployOnAKS.ipynb
+++ b/{{cookiecutter.project_name}}/aks/05_DeployOnAKS.ipynb
@@ -124,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Restore the statistics storage information."
+    "Restore the statistics data."
    ]
   },
   {
@@ -133,8 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stgAcctName = ws.get_details()['storageAccount'].split('/')[-1]\n",
-    "storageConnString = storageConnection.getConnectionStringWithAzCredentials(ws.resource_group, stgAcctName)\n",
+    "storageConnString = get_key(env_path, \"storage_conn_string\")\n",
     "statisticsCollector.hydrateFromStorage(storageConnString)"
    ]
   },
