--- a/{{cookiecutter.project_name}}/00_AMLConfiguration.ipynb
+++ b/{{cookiecutter.project_name}}/00_AMLConfiguration.ipynb
@@ -28,7 +28,8 @@
     "from dotenv import set_key, get_key, find_dotenv\n",
     "from pathlib import Path\n",
     "from utilities import get_auth\n",
-    "from MetricsUtils.hpStatisticsCollection import statisticsCollector, CollectionEntry"
+    "from MetricsUtils.hpStatisticsCollection import statisticsCollector, CollectionEntry\n",
+    "from MetricsUtils.storageutils import storageConnection"
    ]
   },
   {
