--- a/{{cookiecutter.project_name}}/aks/06_SpeedTestWebApp.ipynb
+++ b/{{cookiecutter.project_name}}/aks/06_SpeedTestWebApp.ipynb
@@ -76,8 +76,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
    "outputs": [],
    "source": [
     "CONCURRENT_REQUESTS = 4   # Number of requests at a time"
