Save the URI and API key.

--- a/{{cookiecutter.project_name}}/aks/05_DeployOnAKS.ipynb
+++ b/{{cookiecutter.project_name}}/aks/05_DeployOnAKS.ipynb
@@ -418,6 +418,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write the URI and key to the statistics tracker."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "statisticsCollector.addEntry(CollectionEntry.AKS_REALTIME_ENDPOINT, scoring_url)\n",
+    "statisticsCollector.addEntry(CollectionEntry.AKS_REALTIME_KEY, api_key)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
