Comment out app.route

--- a/{{cookiecutter.project_name}}/03_DevelopScoringScript.ipynb
+++ b/{{cookiecutter.project_name}}/03_DevelopScoringScript.ipynb
@@ -154,12 +154,12 @@
     "    return json.dumps(resp)\n",
     "\n",
     "\n",
-    "@app.route(\"/is_ready\", methods=[\"GET\"])\n",
+    "# @app.route(\"/is_ready\", methods=[\"GET\"])\n",
     "def is_ready(body):\n",
     "    return 1\n",
     "\n",
     "\n",
-    "@app.route(\"/metadata\", methods=[\"GET\"])\n",
+    "# @app.route(\"/metadata\", methods=[\"GET\"])\n",
     "def metadata(body):\n",
     "    return {\n",
     "        \"azEnvironment\": \"Azure\",\n",
