--- a/{{cookiecutter.project_name}}/03_DevelopScoringScript.ipynb
+++ b/{{cookiecutter.project_name}}/03_DevelopScoringScript.ipynb
@@ -151,30 +151,7 @@
     "    resp = model.score(text_to_score)\n",
     "    end = t.default_timer()\n",
     "    logger.info(\"Prediction took {0} ms\".format(round((end-start)*1000, 2)))\n",
-    "    return json.dumps(resp)\n",
-    "\n",
-    "\n",
-    "# @app.route(\"/is_ready\", methods=[\"GET\"])\n",
-    "def is_ready(body):\n",
-    "    return 1\n",
-    "\n",
-    "\n",
-    "# @app.route(\"/metadata\", methods=[\"GET\"])\n",
-    "def metadata(body):\n",
-    "    return {\n",
-    "        \"azEnvironment\": \"Azure\",\n",
-    "        \"location\": \"westus2\",\n",
-    "        \"osType\": \"Ubuntu 16.04\",\n",
-    "        \"resourceGroupName\": \"\",\n",
-    "        \"resourceId\": \"\",\n",
-    "        \"sku\": \"\",\n",
-    "        \"subscriptionId\": \"\",\n",
-    "        \"uniqueId\": \"PythonMLRST\",\n",
-    "        \"vmSize\": \"\",\n",
-    "        \"zone\": \"\",\n",
-    "        \"isServer\": False,\n",
-    "        \"version\": \"\"\n",
-    "    }"
+    "    return json.dumps(resp)"
    ]
   },
   {
