--- a/{{cookiecutter.project_name}}/04_CreateImage.ipynb
+++ b/{{cookiecutter.project_name}}/04_CreateImage.ipynb
@@ -183,7 +183,7 @@
    "outputs": [],
    "source": [
     "conda_pack = [\"scikit-learn==0.19.1\", \"pandas==0.23.3\"]\n",
-    "requirements = [\"lightgbm==2.1.2\", \"azureml-defaults==1.0.10\"]"
+    "requirements = [\"lightgbm==2.1.2\", \"azureml-defaults==1.0.10\", \"azureml-contrib-services\"]"
    ]
   },
   {
