--- a/{{cookiecutter.project_name}}/04_CreateImage.ipynb
+++ b/{{cookiecutter.project_name}}/04_CreateImage.ipynb
@@ -151,7 +151,7 @@
     "        logger.info(\"Prediction took {0} ms\".format(round((end-start)*1000, 2)))\n",
     "        return(json.dumps(resp))\n",
     "    if request.method == 'GET':\n",
-    "        resp_body = str.encode({\n",
+    "        resp_body = {\n",
     "            \"azEnvironment\": \"Azure\",\n",
     "            \"location\": \"westus2\",\n",
     "            \"osType\": \"Ubuntu 16.04\",\n",
@@ -164,8 +164,8 @@
     "            \"zone\": \"\",\n",
     "            \"isServer\": False,\n",
     "            \"version\": \"\"\n",
-    "        })\n",
-    "        return AMLResponse(resp_body, 201)\n",
+    "        }\n",
+    "        return(json.dumps(resp_body))\n",
     "    return AMLResponse(\"bad request\", 500)"
    ]
   },
