Fix score.py for metadata

--- a/{{cookiecutter.project_name}}/04_CreateImage.ipynb
+++ b/{{cookiecutter.project_name}}/04_CreateImage.ipynb
@@ -165,7 +165,7 @@
     "            \"isServer\": False,\n",
     "            \"version\": \"\"\n",
     "        }\n",
-    "        return(json.dumps(resp_body))\n",
+    "        return(resp_body)\n",
     "    return AMLResponse(\"bad request\", 500)"
    ]
   },
