fixed scaling commands

--- a/{{cookiecutter.project_name}}/aks/05_DeployOnAKS.ipynb
+++ b/{{cookiecutter.project_name}}/aks/05_DeployOnAKS.ipynb
@@ -648,7 +648,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!kubectl scale --current-replicas=$num_replicas --replicas=$new_num_replicas {\"deployment/\" + aks_service_name}"
+    "!kubectl get namespaces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl scale --current-replicas=$num_replicas --replicas=$new_num_replicas {\"deployments/\" + aks_service_name} --namespace azureml-workspace"
    ]
   },
   {
@@ -715,7 +724,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
