Print the storage connection string

--- a/{{cookiecutter.project_name}}/00_AMLConfiguration.ipynb
+++ b/{{cookiecutter.project_name}}/00_AMLConfiguration.ipynb
@@ -214,7 +214,8 @@
     "if storageConnString == \"YOUR_STORAGE_CONNECTION_STRING\":\n",
     "    stgAcctName = ws.get_details()['storageAccount'].split('/')[-1]\n",
     "    storageConnString = storageConnection.getConnectionStringWithAzCredentials(resource_group, stgAcctName)\n",
-    "set_key(env_path, \"storage_conn_string\", storageConnString)"
+    "set_key(env_path, \"storage_conn_string\", storageConnString)\n",
+    "print(\"storage_conn_string: {}\".format(storageConnString))"
    ]
   },
   {
