Have only one parameters cell per Papermill limitation

--- a/{{cookiecutter.project_name}}/00_AMLConfiguration.ipynb
+++ b/{{cookiecutter.project_name}}/00_AMLConfiguration.ipynb
@@ -111,7 +111,8 @@
     "\n",
     "tenant_id = \"YOUR_TENANT_ID\" # Optional for service principal authentication\n",
     "username = \"YOUR_SERVICE_PRINCIPAL_APPLICATION_ID\" # Optional for service principal authentication\n",
-    "password = \"YOUR_SERVICE_PRINCIPAL_PASSWORD\" # Optional for service principal authentication"
+    "password = \"YOUR_SERVICE_PRINCIPAL_PASSWORD\" # Optional for service principal authentication\n",
+    "storageConnString = \"YOUR_STORAGE_CONNECTION_STRING\""
    ]
   },
   {
@@ -190,19 +191,6 @@
    "metadata": {},
    "source": [
     "Get a connection string to the workspace's storage to use to save the statistics."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "parameters"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "storageConnString = \"YOUR_STORAGE_CONNECTION_STRING\""
    ]
   },
   {
